# activation_oracles

./: AO_exploration_utils.py  commands.txt  context.md  pyproject.toml
experiments/: explore_anoz_quirk.ipynb  explore_anoz_quirk_first_letter.ipynb  explore_mo_model.ipynb  olmo2_1b_capital_demo.ipynb  olmo2_1b_dpo_oracle_demo.ipynb  olmo_oracle_demo.ipynb  reproduced_activation_oracle_demo.ipynb  reproduced_activation_oracle_demo_gemma9b.ipynb  reproduced_activation_oracle_demo_olmo1b.ipynb  reproduced_original_activation_oracle_demo_gemma9b.ipynb  reproduced_v1_activation_oracle_demo_gemma9b.ipynb  uprog_MO_oracle_demo.ipynb  wide_examples_MO_oracle_demo.ipynb
experiments/gemma_2_9b_narrow_exploration/: narrow_eval_utils.py
experiments/gemma_2_9b_narrow_exploration/anoz_mo/: eval.py  prompts.json  results.json
experiments/gemma_2_9b_narrow_exploration/anoz_mo_pair_question/: eval.py  results.json
experiments/gemma_2_9b_narrow_exploration/examples_mo_detection/: eval.py  results.json
nl_probes/: sft.py  sft_fixed.py
nl_probes/configs/: sft_config_gemma.py  sft_config_gemma3_1b.py  sft_config_gemma3_1b_dpo_123.py  sft_config_olmo.py
nl_probes/dataset_classes/: act_dataset_manager.py  classification.py  classification_dataset_manager.py  latentqa_dataset.py  past_lens_dataset.py  sae_training_data.py
nl_probes/utils/: activation_utils.py  common.py
scripts/: average_anoz_activations.py  average_uprog_activations.py  average_wexamples_activations.py  count_anoz_letter_predictions.py
(+3 files in other folders)
