[project]
name = "nl_probes"
version = "0.0.1"
description = "nl_probes"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "accelerate==1.10.1",
    "codetiming",
    "datasets==3.6.0",
    "dill",
    "hydra-core",
    "liger-kernel",
    "numpy<2.0.0",
    "pandas",
    "peft==0.17.1",
    "pyarrow>=19.0.0",
    "fastparquet",
    "pybind11",
    "pylatexenc",
    "pre-commit",
    "ray[default]",
    "tensordict>=0.8.0,<=0.9.1,!=0.9.0",
    "torch==2.7.1",
    "flash-attn",
    "torchdata",
    "transformers==4.55.2",
    "vllm==0.10.0",
    "einops==0.8.1",
    "wandb==0.22.3",
    "packaging>=20.0",
    "uvicorn",
    "fastapi",
    "typer",
    "latex2sympy2_extended",
    "math_verify",
    "pydantic==2.11.7",
    "regex",
    "python-dotenv",  # Note: the package is "python-dotenv" not "dotenv"
    "slist",
    "plotly",
    "anthropic",
    "openai",
    "tenacity",
    "matplotlib",
    "trl==0.18.2",
    "bitsandbytes==0.48.1",
    "fire",
    "tqdm",
    "pytest",
    "ipykernel",
    "circuitsvis>=1.43.3",
    "jaxtyping",
    "huggingface-hub",
    "rapidfuzz",
    "hf_transfer",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nl_probes", "nl_probes.*"]


[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
